--- a/assets/pages/membros.html
+++ b/assets/pages/membros.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <header class="navegation">
-            <a href="../../index.html"><img src="../images/4.png" alt="logo tipo da empresa"></a>                    
+            <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
             <nav>
                 <ul>                                 
                   <li><a href="./carrinho.html">Carrinho</a></li>
@@ -51,7 +51,7 @@
     </main>
     <footer class="footer">
       <section>
-        <img src="" alt="logotipo da academia" class="footerLogo" />
+        <img src="/assets/images/4.png" alt="logotipo da academia" class="footerLogo" />
       </section>
       <section>
         <h2 class="footerTitler">Siga a Orange Fitness</h2>
