--- a/assets/pages/blog.html
+++ b/assets/pages/blog.html
@@ -21,30 +21,37 @@
     </header>
     <main>
       <h1>Blog e Notícias</h1>
-      <article class="blog-post">
-        <h2>Dicas para uma Alimentação Saudável</h2>
+      <article class="blogPost">       
+        <h2>Dicas para uma Alimentação Saudável</h2>    
         <p>
           Confira algumas dicas para manter uma alimentação saudável e
           equilibrada, essencial para alcançar seus objetivos de fitness.
         </p>
-        <p><a href="post1.html">Leia mais</a></p>
+        <button type="button" class="button">
+          <a href="https://vidasaudavel.einstein.br/alimentacao-equilibrada/" target="_blank" rel="noopener">Leia mais</a>
+        </button>       
       </article>
-      <article class="blog-post">
+      <article class="blogPost">
         <h2>Benefícios do Treinamento de Força</h2>
         <p>
           Descubra os benefícios do treinamento de força para a saúde e a forma
           física, e como incluí-lo em sua rotina de exercícios.
         </p>
-        <p><a href="post2.html">Leia mais</a></p>
+        <button type="button" class="button">
+          <a href="https://boomi.com.br/10-beneficios-do-treinamento-de-forca/" target="_blank" rel="noopener">Leia mais</a>
+        </button>
+         
       </article>
-      <article class="blog-post">
+      <article class="blogPost">
         <h2>Receita Saudável: Smoothie de Frutas</h2>
         <p>
           Aprenda a preparar um delicioso smoothie de frutas que fornece os
           nutrientes necessários para um dia cheio de energia.
         </p>
-        <p><a href="post3.html">Leia mais</a></p>
-      </article>
+          <button type="button" class="button">
+          <a href="https://www.receiteria.com.br/receitas-de-smoothie/" target="_blank" rel="noopener">Leia mais</a>
+        </button>          
+      </article>   
     </main>
     <footer class="footer">
       <section>
@@ -138,7 +145,7 @@
               >
                 <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                 <style>
-                  svg {
+               svg {
                     fill: #ffffff;
                   }
                 </style>
