--- a/assets/pages/depoimentos.html
+++ b/assets/pages/depoimentos.html
@@ -12,12 +12,12 @@
     <header class="navegation">
         <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
         <nav>
-            <ul>                                 
-                <li><a href="./horario.html">Horário de Aulas</a></li>
-                <li><a href="./galeria.html">Galeria de Fotos</a></li>                
-                <li><a href="./membros.html">Área de Membros</a></li>               
-                <li><a href="./carrinho.html">Carrinho de compra</a></li>
-            </ul>
+          <ul>               
+            <li><a href="./membros.html">Membros</a></li>
+            <li><a href="./carrinho.html">Carrinho</a></li>
+            <li><a href="./galeria.html">Galeria</a></li>
+            <li><a href="./horario.html">Horários</a></li>
+          </ul>
         </nav>
     </header>
     <main>
