--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
       <nav>
 
         <ul>
+          <li><a href="./assets/pages/loginMembros.html">Membros</a></li>
           <li><a href="./assets/pages/carrinho.html">Carrinho</a></li>
-          <li><a href="./assets/pages/membros.html">Membros</a></li>
           <li><a href="./assets/pages/galeria.html">Galeria</a></li>
           <li><a href="./assets/pages/horario.html">Horários</a></li>
+          
         </ul>
         
       </nav>
